--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "prettier-standard": "^8.0.0"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,json,css}": [
-      "prettier-standard",
-      "git add"
-    ]
+    "linters": {
+      "src/**/*.{js,jsx,json}": [
+        "prettier-standard",
+        "git add"
+      ]
+    }
   }
 }
