--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     }
   },
   "devDependencies": {
-    "husky": "^0.14.3",
+    "husky": "^0.15.0-rc.8",
     "lint-staged": "^7.0.0",
     "prettier-standard": "^8.0.0"
   }
