--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     }
   },
   "devDependencies": {
+    "flow-bin": "^0.66.0",
     "husky": "^0.15.0-rc.8",
     "lint-staged": "^7.0.0",
     "prettier-standard": "^8.0.0"
