--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "flow": "flow"
   },
   "husky": {
     "hooks": {
@@ -21,15 +22,17 @@
   "lint-staged": {
     "linters": {
       "src/**/*.{js,jsx,json}": [
-        "prettier-standard",
+        "prettier",
         "git add"
       ]
     }
   },
   "devDependencies": {
+    "eslint-config-standard": "^11.0.0",
+    "eslint-config-standard-flow": "^1.0.1",
     "flow-bin": "^0.66.0",
     "husky": "^0.15.0-rc.8",
     "lint-staged": "^7.0.0",
-    "prettier-standard": "^8.0.0"
+    "prettier": "1.11.1"
   }
 }
