--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "standard": "^11.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -19,20 +20,24 @@
       "pre-commit": "lint-staged"
     }
   },
+  "standard": {
+    "parser": "babel-eslint",
+    "plugins": [
+      "flowtype"
+    ]
+  },
   "lint-staged": {
     "linters": {
       "src/**/*.{js,jsx,json}": [
-        "prettier",
+        "standard --fix --parser babel-eslint --plugin flowtype",
         "git add"
       ]
     }
   },
   "devDependencies": {
-    "eslint-config-standard": "^11.0.0",
-    "eslint-config-standard-flow": "^1.0.1",
+    "eslint-plugin-flowtype": "^2.46.1",
     "flow-bin": "^0.66.0",
     "husky": "^0.15.0-rc.8",
-    "lint-staged": "^7.0.0",
-    "prettier": "1.11.1"
+    "lint-staged": "^7.0.0"
   }
 }
