--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     }
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.2",
     "eslint-plugin-flowtype": "^2.46.1",
     "flow-bin": "^0.66.0",
     "husky": "^0.15.0-rc.8",
