some flow patches

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "parser": "babel-eslint",
     "plugins": [
       "flowtype"
+    ],
+    "globals": [
+      "SyntheticEvent"
     ]
   },
   "lint-staged": {
