--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "quarterback",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://doubleswirve.github.io/quarterback",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -9,6 +10,8 @@
     "standard": "^11.0.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
@@ -41,6 +44,7 @@
     "babel-eslint": "^8.2.2",
     "eslint-plugin-flowtype": "^2.46.1",
     "flow-bin": "^0.66.0",
+    "gh-pages": "^1.1.0",
     "husky": "^0.15.0-rc.8",
     "lint-staged": "^7.0.0"
   }
