--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
+    "bootstrap": "^4.0.0",
     "eslint-plugin-flowtype": "^2.46.1",
     "flow-bin": "^0.66.0",
     "gh-pages": "^1.1.0",
