big big changes for adding custom css classes

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
       "flowtype"
     ],
     "globals": [
+      "HTMLButtonElement",
       "HTMLInputElement",
       "HTMLSelectElement",
       "SyntheticEvent",
