--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-flowtype": "^2.46.1",
     "flow-bin": "^0.66.0",
     "gh-pages": "^1.1.0",
+    "glyphicons-only-bootstrap": "^1.0.1",
     "husky": "^0.15.0-rc.8",
     "lint-staged": "^7.0.0"
   }
