try converting to npm module

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "quarterback",
   "version": "0.1.0",
-  "private": true,
   "homepage": "https://doubleswirve.github.io/quarterback",
+  "main": "lib/index.js",
+  "files": [
+    "lib"
+  ],
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -10,6 +13,7 @@
     "standard": "^11.0.0"
   },
   "scripts": {
+    "prepack": "NODE_ENV=production babel --plugins transform-flow-strip-types --presets react-app src/lib -d lib",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
@@ -45,7 +49,11 @@
     }
   },
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.2",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-preset-react-app": "^3.1.1",
     "bootstrap": "^4.0.0",
     "eslint-plugin-flowtype": "^2.46.1",
     "flow-bin": "^0.66.0",
