--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "files": [
     "lib"
   ],
+  "author": {
+    "name": "doubleswirve"
+  },
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
