--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "glyphicons-only-bootstrap": "^1.0.1",
     "husky": "^0.15.0-rc.8",
     "lint-staged": "^7.0.0",
+    "react-date-picker": "^6.9.1",
     "standard": "^11.0.0"
   }
 }
