--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@doubleswirve/quarterback",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "homepage": "https://doubleswirve.github.io/quarterback",
   "main": "lib/index.js",
   "files": [
@@ -15,7 +15,7 @@
     "react-scripts": "1.1.1"
   },
   "scripts": {
-    "prepack": "NODE_ENV=production babel --plugins transform-flow-strip-types --presets react-app src/lib -d lib",
+    "prepack": "NODE_ENV=production babel --plugins transform-flow-strip-types --presets react-app src/lib -d lib --copy-files",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
